cluster-ready version of phs3, reading in phs2 and propagating through supplementary silicon and sensor. py nbs for making sup. Si and KDE generator

--- a/py/Electron Phase Space.ipynb
+++ b/py/Electron Phase Space.ipynb
@@ -4,18 +4,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to JupyROOT 6.18/04\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
     "from matplotlib import pylab as plt\n",
-    "# from ROOT import TTree, TFile, TH2D, TCanvas, TH1F, gROOT\n",
-    "# from root_numpy import array2hist, hist2array, fill_hist, tree2array, root2array, list_trees\n",
+    "from ROOT import TTree, TFile, TH2D, TCanvas, TH1F, gROOT\n",
+    "from root_numpy import array2hist, hist2array, fill_hist, tree2array, root2array, list_trees\n",
     "import pandas as pd\n",
     "# from root_pandas import read_root\n",
     "import uproot\n",
     "import time\n",
-    "\n",
+    "# import ROOT\n",
     "\n",
     "# filenameg=\"../output/ClusterAllOne_main_phs1_gamma.root\"\n",
     "# filename=\"../output/ClusterAllOne_main_phs1_electron.root\"\n",
@@ -43,15 +51,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "none of the 3 overloaded methods succeeded. Full details:\n  TTree::TTree() =>\n    takes at most 0 arguments (1 given)\n  TTree::TTree(const char* name, const char* title, int splitlevel = 99, TDirectory* dir = (TDirectory::CurrentDirectory())) =>\n    takes at least 2 arguments (1 given)\n  TTree::TTree(const TTree& tt) =>\n    could not convert argument 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-741006a762f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mintree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTTree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tree'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree2array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: none of the 3 overloaded methods succeeded. Full details:\n  TTree::TTree() =>\n    takes at most 0 arguments (1 given)\n  TTree::TTree(const char* name, const char* title, int splitlevel = 99, TDirectory* dir = (TDirectory::CurrentDirectory())) =>\n    takes at least 2 arguments (1 given)\n  TTree::TTree(const TTree& tt) =>\n    could not convert argument 1"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error in <TFile::TFile>: file ../PhS2_10x10/Skimmed/Skimmed-PhS-e*.root does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename=\"../PhS2_10x10/Skimmed/Skimmed-PhS-e*.root\"    \n",
+    "\n",
+    "rfile = TFile(filename)\n",
+    "intree = TTree(rfile.Get('tree'))\n",
+    "array = tree2array(intree)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.96689510345459\n",
-      "0.5756738185882568\n"
+      "48.37080693244934\n",
+      "0.6368770599365234\n"
      ]
     }
    ],
@@ -85,19 +125,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "filename=\"../PhS2_5x5/Skimmed/Skimmed-PhS-e*.root\"    \n",
+    "rfile = ROOT.TFile(filename)\n",
+    "intree = rfile.Get('tree')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.40902876853943\n",
-      "0.10816001892089844\n"
+      "36.00397706031799\n",
+      "0.11190295219421387\n"
      ]
     }
    ],
@@ -121,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.46841406822205\n",
-      "0.6648187637329102\n"
+      "75.1536808013916\n",
+      "0.6697280406951904\n"
      ]
     }
    ],
@@ -153,9 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dftote' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-98c94793bb7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdftote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdftote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dX'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdfe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Weight'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dftote' is not defined"
+     ]
+    }
+   ],
    "source": [
     "_=plt.hist2d(dftote['X'],dftote['dX'],weights=dfe['Weight'],bins=(50,50))\n"
    ]
